fix(smithery): Apply Smithery.ai chat recommendations
Fixes based on Smithery.ai analysis:
1. Changed startCommand from object to simple string
2. Increased health check start-period from 10s to 30s
3. Added master prompt files (reflexion-master-prompts-v1.1.md, genesis-master-prompts-v2.0-en.md)

These changes should resolve the deployment failures.

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -2,14 +2,4 @@ runtime: "container"
 build:
   dockerfile: "Dockerfile"
   dockerBuildPath: "."
-startCommand:
-  type: "http"
-  configSchema:
-    type: "object"
-    properties:
-      apiKey:
-        type: "string"
-        description: "API key for LLM provider"
-    required: []
-  exampleConfig:
-    apiKey: "your-api-key"
+startCommand: "uvicorn http_server:app --host 0.0.0.0 --port 8080"
