--- a/smithery.yaml
+++ b/smithery.yaml
@@ -2,4 +2,8 @@ runtime: "container"
 build:
   dockerfile: "Dockerfile"
   dockerBuildPath: "."
-startCommand: "uvicorn http_server:app --host 0.0.0.0 --port 8080"
+startCommand:
+  type: "http"
+  configSchema:
+    type: "object"
+    properties: {}
