--- a/smithery.yaml
+++ b/smithery.yaml
@@ -6,4 +6,11 @@ startCommand:
   type: "http"
   configSchema:
     type: "object"
-    properties: {}
+    properties:
+      geminiApiKey:
+        type: "string"
+        description: "Your Gemini API Key (get free at https://aistudio.google.com/app/apikey)"
+      anthropicApiKey:
+        type: "string"
+        description: "Your Anthropic API Key (optional, for Z and CS agents)"
+    required: ["geminiApiKey"]
