fix(smithery): Implement BYOK - default to MockProvider when no API keys
BYOK (Bring Your Own Key) approach:
- Default provider changed from 'openai' to 'mock'
- Server starts successfully without API keys
- Users provide their own keys when connecting
- Smithery scan will succeed with mock provider
- Real providers used when API keys are provided

This allows:
1. Smithery to scan tools without API keys
2. Users to bring their own API keys
3. No revenue needed to cover API costs

--- a/smithery.yaml
+++ b/smithery.yaml
@@ -9,8 +9,7 @@ startCommand:
     properties:
       geminiApiKey:
         type: "string"
-        description: "Your Gemini API Key (get free at https://aistudio.google.com/app/apikey)"
+        description: "Gemini API Key (FREE at https://aistudio.google.com) - Optional, uses mock provider if not set"
       anthropicApiKey:
         type: "string"
-        description: "Your Anthropic API Key (optional, for Z and CS agents)"
-    required: ["geminiApiKey"]
+        description: "Anthropic API Key - Optional, for Z and CS agents"
